// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can transform record with eligible and ineligible criteria 1`] = `
{
  "caseNotes": {
    "ba bar": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Body3",
        "noteTitle": "Title3",
      },
    ],
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteBody": "Body2",
        "noteTitle": "Title2",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": {
      "latestFelonyConvictions": [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2024-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
    "usIdNoActiveNco": {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "clientName": "Betty Rubble",
  },
  "ineligibleCriteria": {
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": undefined,
    },
  },
  "stateCode": "US_ID",
}
`;

exports[`can transform record with old criteria 1`] = `
{
  "caseNotes": {
    "ba bar": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Body3",
        "noteTitle": "Title3",
      },
    ],
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteBody": "Body2",
        "noteTitle": "Title2",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": {
      "latestFelonyConvictions": [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
    "usIdNoActiveNco": {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "clientName": "Betty Rubble",
  },
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`optional criteria have sane fallbacks 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [],
      "latestUaResults": [],
    },
    "noFelonyWithin24Months": {
      "latestFelonyConvictions": [],
    },
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
    "usIdNoActiveNco": {
      "activeNco": false,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "clientName": "Betty Rubble",
  },
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;

exports[`transform record 1`] = `
{
  "caseNotes": {
    "ba bar": [
      {
        "eventDate": 2022-09-06T00:00:00.000Z,
        "noteBody": "Body3",
        "noteTitle": "Title3",
      },
    ],
    "foo": [
      {
        "eventDate": 2022-04-06T00:00:00.000Z,
        "noteBody": "Body1",
        "noteTitle": "Title1",
      },
      {
        "eventDate": 2022-06-06T00:00:00.000Z,
        "noteBody": "Body2",
        "noteTitle": "Title2",
      },
    ],
  },
  "eligibleCriteria": {
    "negativeUaWithin90Days": {
      "latestUaDates": [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": [
        false,
      ],
    },
    "noFelonyWithin24Months": {
      "latestFelonyConvictions": [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "onSupervisionAtLeastOneYear": {
      "eligibleDate": 2022-05-28T00:00:00.000Z,
    },
    "usIdIncomeVerifiedWithin3Months": {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowFor90Days": {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "LOW",
    },
    "usIdNoActiveNco": {
      "activeNco": true,
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": {
    "clientName": "Betty Rubble",
  },
  "ineligibleCriteria": {},
  "stateCode": "US_ID",
}
`;
